modules/ballerina-native/src/test/resources/lang/errors/invalid-ignore.bal
function test1(){
    _ = testMultiReturn1();
}

function testMultiReturn1()(string){
    return "a";
}



